Prevent img to have a 2px border default styke on IE

--- a/web/css/cryptris.css
+++ b/web/css/cryptris.css
@@ -34,6 +34,8 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h3 { margin-bottom: -10px; }
+
+img { border: none;}
 /*
 	General stuff
 */
